Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
12.2.1, 10.6.25, 11.4.10, 11.8.6
-
Can result in hang or crash
-
wsrep_slave_FK_checks configuration option was deprecated and from no on has no effect. Slave foreign key checks are always on as otherwise leads to massive data inconsistency on all replicas which subsequently results in master node abort.
-
Q1/2026 Galera Development, Q2/2026 Galera Maintenance
Description
Since ATM wsrep does not replicate any cascaded changes (because they are not binlogged in the upstream code) we have to rely on foreign checks on replicas to reproduce the cascade. Thus setting wsrep_slave_fk_checks=OFF will result in inconsistency in any setup where there are cascading relations.
Mark this option as deprecated and make it a NOOP.
The issue can be confirmed by running galera_fk_cascade_delete MTR test with wsrep_slave_fk_checks=OFF
Attachments
Issue Links
- causes
-
MDEV-39385 backport MDEV-38787 to 10.6
-
- Closed
-
- relates to
-
MDEV-34822 Skip FK checks in Galera during applying in IST
-
- Closed
-
-
MDEV-36360 Disabling FK and UK checks on appliers may lead to deadlock
-
- Closed
-